welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: type mismatch;
 found   : Unit
 required: Boolean
  for (car <-0 to 5){
           ^